--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <section>
-<label> Login </label>
+<label> Sign Up </label>
 <form action="/submit_form">
     <section>
         <label> Username </label>
@@ -10,9 +10,7 @@
     <input type="password" placeholder="Enter password here" autocomplete="off">
     </section>
    
-    <button type="submit">Login</button>
-    <a href="#">Sign up here instead</a>
+    <button type="submit">Sign Up</button>
+    <a href="/login">Log in here instead</a>
 </form>
 </section>
-
-
