setting up the login js

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,17 +2,19 @@
 <label> Login </label>
 <form action="/submit_form">
     <section>
-        <label> Username </label>
-        <input type="username" placeholder="Enter username here">
+        <label for="username-login"> Username </label>
+        <input id="username-login"type="username" placeholder="Enter username here">
     </section>
     <section>
  <label for="password-login"> Password </label>
-    <input type="password" placeholder="Enter password here" autocomplete="off">
+    <input id="password-login" type="password" placeholder="Enter password here" autocomplete="off">
     </section>
    
     <button type="submit">Login</button>
     <a href="#">Sign up here instead</a>
 </form>
 </section>
+
+<script src="../public/js/login.js"></script>
 
 
