--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,9 @@
-{{#each}}
+{{log posts}}
+{{#each posts }}
 <section>
-    <h2>{{post.title}}</h2>
-    <h2>{{post.created_on}}</h2>
+    <h2>{{title}}</h2>
+    <h2>{{author}}</h2>
+    <p>{{content}}</p>
 </section>
 {{/each}}
 
