editing models and seed data to match and align

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <section>
 <label> Login </label>
-<form action="/submit_form">
+<form id="login-form">
     <section>
         <label for="username-login"> Username </label>
         <input id="username-login"type="username" placeholder="Enter username here">
@@ -11,7 +11,7 @@
     </section>
    
     <button type="submit">Login</button>
-    <a href="#">Sign up here instead</a>
+    <a href="/signup">Sign up here instead</a>
 </form>
 </section>
 
